syntax = "proto3";
package model;

message MetaWallet {
    enum State {
        INIT = 0;
        CREATED = 10;
        UPDATED = 20;
    }
    string id = 1;
    string user_id = 2;
    string state = 3;
    uint64 created_at = 4;
    uint64 updated_at = 5;
    map<string, string> metadata = 6;
}
